--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,8 @@ jobs:
         # steps:
         #     - checkout # check out the code in the project directory
         #     - run: echo "hello world" # run the `echo` command
+        working_directory: ~/repo
+
         steps:
             - run: yarn install
             - run: yarn run test
