--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,5 +9,7 @@ jobs:
         working_directory: ~/repo
 
         steps:
+            - checkout
+            - run: ls -l ~/repo
             - run: yarn install
             - run: yarn run test
