--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 	"private": true,
 	"scripts": {
 		"test": "nodemon index.js & yarn run cypress open",
-		"start": "nodemon index.js"
+		"start": "nodemon index.js",
+		"ci:test": "yarn run cypress run"
 	},
 	"dependencies": {
 		"express": "^4.16.4",
