--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
         steps:
             - checkout
             - run: ls -l ~/repo
+            - run: echo $NODE_ENV
             - run: yarn install
-            - run: yarn start
+            - run: NODE_ENV=production yarn start
             - run: ci:test
