--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,14 @@
 version: 2
 jobs:
     build:
-        docker: # use the docker executor type; machine and macos executors are also supported
-            - image: circleci/node:10.14.1 # the primary container, where your job's commands are run
-        # steps:
-        #     - checkout # check out the code in the project directory
-        #     - run: echo "hello world" # run the `echo` command
-        working_directory: ~/repo
+        docker:
+            - image: circleci/node:10.14.1
 
+        working_directory: ~/repo
         steps:
             - checkout
             - run: ls -l ~/repo
             - run: echo $NODE_ENV
             - run: yarn install
-            - run: NODE_ENV=production yarn start
+            - run: NODE_ENV=testing yarn start
             - run: ci:test
