updated circleci env vars

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,11 @@ jobs:
             - image: circleci/node:10.14.1
 
         working_directory: ~/repo
+        environment:
+            MONGO_UIR: $MONGO_URI
         steps:
             - checkout
             - run: ls -l ~/repo
-            - run: echo $NODE_ENV
             - run: yarn install
             - run: NODE_ENV=testing yarn start
             - run: ci:test
