--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
 
         working_directory: ~/repo
         environment:
-            MONGO_UIR: $MONGO_URI
+            MONGO_URI: $MONGO_URI
         steps:
             - checkout
             - run: ls -l ~/repo
