--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,14 +7,14 @@ jobs:
         working_directory: ~/repo
         steps:
             - checkout
-            - run: ls -l ~/repo
-            - run: yarn install
+            # - run: ls -l ~/repo
             - run:
-                  name: 'What is my mongo uri?'
+                  name: 'Install Packages'
+                  command: 'yarn install'
+            - run:
+                  name: 'Mongo URI:'
                   command: echo ${MONGO_URI}
             - run:
                   name: 'Run Testing Environment'
-                  command: 'NODE_ENV=testing yarn start'
-                  environment:
-                      MONGO_URI: ${MONGO_URI}
+                  command: 'NODE_ENV=testing MONGO_URI=${MONGO_URI} yarn start'
             - run: ci:test
