--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,11 +3,9 @@ jobs:
     build:
         docker:
             - image: circleci/node:10.14.1
-
         working_directory: ~/repo
         steps:
             - checkout
-            # - run: ls -l ~/repo
             - run:
                   name: 'Install Packages'
                   command: 'yarn install'
@@ -16,5 +14,4 @@ jobs:
                   command: echo ${MONGO_URI}
             - run:
                   name: 'Run Testing Environment'
-                  command: 'NODE_ENV=testing MONGO_URI=${MONGO_URI} yarn start'
-            - run: ci:test
+                  command: 'NODE_ENV=testing MONGO_URI=${MONGO_URI} yarn start & ci:test'
