updated test command to long name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,4 +14,4 @@ jobs:
                   command: echo ${MONGO_URI}
             - run:
                   name: 'Run Testing Environment'
-                  command: 'NODE_ENV=testing MONGO_URI=${MONGO_URI} yarn start & yarn run ci:test'
+                  command: 'NODE_ENV=testing MONGO_URI=${MONGO_URI} yarn start & yarn run cypress run'
