--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
                   command: 'yarn install'
             - run:
                   name: 'Verify Cypress'
-                  command: 'yarn run cy:verify'
+                  command: 'yarn run cypress verify'
             - save_cache:
                   key: cache-{{ checksum "package.json" }}
                   paths:
