--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"express-fileupload": "^1.1.5",
 		"express-graphql": "^0.8.0",
 		"graphql": "^14.2.1",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.5.3"
 	},
 	"devDependencies": {
